feat: add more color theme options to JSON config

--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -12,6 +12,10 @@
             "normal": "#00cef7",
             "dark": "#007b94"
         },
-        "third": "#4f149c"
+        "third": "#4f149c",
+        "background": {
+            "good": "#bddbff",
+            "bad": "#ffbacd"
+        }
     }
 }
