--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/leaflet": "^1.9.12",
     "axios": "^1.6.8",
+    "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
